--- a/src/app/dashboard/sensors-data/sensors-data.component.scss
+++ b/src/app/dashboard/sensors-data/sensors-data.component.scss
@@ -47,3 +47,11 @@ button {
 .float-left{
   text-align:start;
 }
+
+.row-border{
+  border-top:1px solid black;
+}
+
+.row-label{
+  font-weight: 600;
+}
