--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,8 +1,4 @@
-<button
-  class="btn btn-outline-warning"
-  (click)="onClick()"
->
- Daten erfassen
- <mat-icon *ngIf="!isOpen">keyboard_arrow_down</mat-icon>
- <mat-icon *ngIf="isOpen">keyboard_arrow_up</mat-icon>
+<button class="btn btn-outline-warning" (click)="onClick()">
+  <mat-icon>control_point</mat-icon>
+  Daten erfassen
 </button>
