--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,1 @@
-<app-add-sensors-data [currentPage]=sensorsDataComponent?.currentPage></app-add-sensors-data>
-<app-sensors-data #currentPage></app-sensors-data>
+<app-sensors-data></app-sensors-data>
