--- a/src/app/dashboard/add-sensors-data/add-sensors-data.component.html
+++ b/src/app/dashboard/add-sensors-data/add-sensors-data.component.html
@@ -1,21 +1,33 @@
 <form [formGroup]="sensorenDataForm" (ngSubmit)="onSubmit()">
   <h2>Neuen Messwert hinzufügen</h2>
-  <select formControlName="sensorId">
+  <select formControlName="sensorId" [ngClass]="getInvalidClass('sensorId')">
     <option value="" disabled>Bitte Sensor auswählen</option>
     <option *ngFor="let item of storeService.sensoren" [ngValue]="item.id">
       {{ item?.name }}
     </option>
   </select>
-  <input placeholder="Datum" type="date" name="datum" formControlName="date" />
   <input
-    placeholder="Temperatur (in °C)"
+    [ngClass]="getInvalidClass('date')"
+    placeholder="Datum"
+    type="date"
+    name="datum"
+    formControlName="date"
+  />
+  <input
+    [ngClass]="getInvalidClass('temperature')"
+    placeholder="Temperatur (in °C) *"
     type="number"
+    min="-45"
+    max="50"
     name="Temperatur"
     formControlName="temperature"
   />
   <input
-    placeholder="Luftfeuchtigkeit (in %)"
+    [ngClass]="getInvalidClass('humidity')"
+    placeholder="Luftfeuchtigkeit (in %) *"
     type="number"
+    min="0"
+    max="100"
     name="Luftfeutigkeit"
     formControlName="humidity"
   />
@@ -28,7 +40,11 @@
     >
       Abbrechen
     </button>
-    <button class="col btn btn-outline-warning" type="submit">
+    <button
+      class="col btn btn-outline-warning"
+      [disabled]="sensorenDataForm.invalid"
+      type="submit"
+    >
       <span
         *ngIf="isAdding"
         class="spinner-border spinner-border-sm"
@@ -36,6 +52,9 @@
         aria-hidden="true"
       ></span>
       Erfassen
+    </button>
+    <button mat-icon-button (click)="openHelp()">
+      <mat-icon>help</mat-icon>
     </button>
   </div>
 </form>
