--- a/src/app/dashboard/add-sensors-data/add-sensors-data.component.scss
+++ b/src/app/dashboard/add-sensors-data/add-sensors-data.component.scss
@@ -27,7 +27,7 @@ input, select
     outline: none;
     border-radius: 0.3em;
     margin-bottom: 20px;
-    width: 50%;
+    width: 66%;
 }
 
 input:focus {
@@ -54,4 +54,8 @@ input[type=submit]:hover {
 .align-flex-end {
     display: flex;
     justify-content: flex-end;
+}
+
+.invalid{
+  border: 2px solid red;
 }
