UX Review => Snackbar Notifications

--- a/src/app/spinner/spinner.component.html
+++ b/src/app/spinner/spinner.component.html
@@ -4,7 +4,7 @@
       <div class="row justify-content-center">
         <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
       </div>
-      <div class="row">
+      <div class="row mt-1">
         <h5>Ihre Daten werden geladen...</h5>
       </div>
     </div>
