--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,4 +1,4 @@
 <button class="btn btn-outline-warning" (click)="onClick()">
-  <mat-icon>control_point</mat-icon>
+  <mat-icon style="margin-right: 10px">control_point</mat-icon>
   Daten erfassen
 </button>
